--- a/.harness/cd_ruchira.yaml
+++ b/.harness/cd_ruchira.yaml
@@ -7,6 +7,7 @@ pipeline:
   stages:
     - stage:
         name: Deploy
+        identifier: Deploy
         description: This is test
         type: Deployment
         spec:
