Update pipeline cd_ruchira

--- a/.harness/cd_ruchira.yaml
+++ b/.harness/cd_ruchira.yaml
@@ -45,3 +45,9 @@ pipeline:
                 - AllErrors
               action:
                 type: StageRollback
+  variables:
+    - name: test
+      type: String
+      description: ""
+      required: false
+      value: <+input>
